# sequra_challenge

./: .gitignore  README.md
part-1/: README.md  main.tf  provider.tf  terraform.tfvars  variables.tf
part-2/: README.md
part-3/: .pre-commit-config.yaml  README.md  pyproject.toml
part-3/conf/: pipeline.yaml
part-3/sequra_challenge/: config.py  main.py
part-4/: README.md
