[tool.poetry]
name = "sequra-challenge"
version = "0.1.0"
description = ""
authors = ["Eli Morató <elisabet.morato@belvo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
redshift-connector = "^2.1.1"
fsspec = "^2024.6.0"
s3fs = "^2024.6.0"
pydantic = "^2.7.3"
pyyaml = "^6.0.1"
pre-commit = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
